# jetracer

./: .gitignore  CannyEdgeRoadFollowing.ipynb  test.ipynb  testingIntersection_topology_fixed.ipynb
jetracer_autonomous/: BUILD_GUIDE.md  CMakeLists.txt  DEVELOPMENT_GUIDE.md  README.md  package.xml  requirements.txt  setup.py
jetracer_autonomous/config/: params.yaml
jetracer_autonomous/launch/: autonomous_drive.launch
jetracer_autonomous/scripts/: autonomous_drive_node.py  csi_camera_node.py
jetracer_autonomous/src/jetracer_autonomous/: __init__.py  config.py  main_node.py
jetracer_autonomous/src/jetracer_autonomous/control/: __init__.py  controller.py  steering_utils.py  turn_controller.py
jetracer_autonomous/src/jetracer_autonomous/decision/: __init__.py  decision_manager.py
jetracer_autonomous/src/jetracer_autonomous/perception/: __init__.py  line_detector.py  perception_filter.py  yolo_detector.py
jetracer_autonomous/src/jetracer_autonomous/utils/: __init__.py  debug_overlay.py  logger.py
jetracer_autonomous/src/jetracer_autonomous/vehicle/: __init__.py  vehicle_interface.py
jetracer_autonomous/tools/: jetracer_motor_http_service.py  run_host_ros_yolo_docker.sh  yolo_http_service.py
jetracer_ros/: CMakeLists.txt
jetracer_ros/cfg/: jetracer.cfg  laserFilter.cfg
jetracer_ros/launch/: turn_controller.launch
jetracer_ros/scripts/: aiui.py  turn_controller_node.py
jetracer_ros/src/: jetracer.cpp
