<?xml version="1.0"?>
<package format="2">
  <name>jetracer_autonomous</name>
  <version>0.1.0</version>
  <description>Simplified autonomous driving node for the Waveshare JetRacer ROS AI Kit.</description>

  <maintainer email="student@example.com">Student Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
  </export>
</package>
